--- a/src/main/resources/public/app.html
+++ b/src/main/resources/public/app.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="js/highstock.js"></script>
   <script type="text/javascript" src="js/lodash.min.js"></script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </head>
 
 <body>
