--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,14 +6,17 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 
-  <title>Easy Backtester</title>
+  <title>Projections.me</title>
 </head>
 <body id="splash">
-  <img class="logo"src="img/logo-white.png">
-  <h1 id="makeWealth" class="animated fadeInLeft">Make<br>your wealth.</h1>
+  <header class="main">
+    <img class="logo"src="img/logo-white.png">
+    <h1 id="makeWealth" class="one">Make</h1><br>
+    <h1 id="makeWealth" class="two">your wealth.</h1>
+    <p id="sideDesc" class="animated">
+      Instant, algorithmic investment advice on S&P 500 Companies.
+    </p>
+  </header>
   <a id="startLink" class="begin animated fadeInRight" href="app.html">Start.</a>
-  <p id="sideDesc" class="animated fadeInUp">
-    Test your trading strategies for success.
-  </p>
 </body>
 </html>
