--- a/src/main/resources/public/app.html
+++ b/src/main/resources/public/app.html
@@ -13,6 +13,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
   <script type="text/javascript" src="js/highstock.js"></script>
   <script type="text/javascript" src="js/lodash.min.js"></script>
   <script type="text/javascript" src="js/modernizr.js"></script>
