--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,4 +19,9 @@
   </header>
   <a id="startLink" class="begin animated fadeInRight" href="app.html">Start.</a>
 </body>
+<footer>
+  <p id="disclaimer" class="animated">
+    Disclaimer: We are not responsible for any loss of cash-money accrued while using our recommendations. Sucks to suck. 
+  </p>
+</footer>
 </html>
