--- a/src/main/resources/public/app.html
+++ b/src/main/resources/public/app.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="css/ionicons.min.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
   <title>Projections.me</title>
 
@@ -17,14 +18,11 @@
   <script type="text/javascript" src="js/highstock.js"></script>
   <script type="text/javascript" src="js/lodash.min.js"></script>
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="app.js"></script> 
 </head>
 
 <body>
-  <div class="container">
-
     <div ui-view></div>
-  </div>
 </body>
 
 </html>
